5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1760_672.log
== TEST (2019-05-22 10:02:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import
n = int(input("digite o numero de uns: "))
n1 = ones(n, dtype=int)
print(n1)
-- ERROR:
File "XXXX", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:03:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = int(input("digite o numero de uns: "))
n1 = ones(n, dtype=int)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:03:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = int(input("digite o numero de uns: "))
n1 = ones(n, dtype=int)
print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 10:03:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = int(input("digite o numero de uns: "))
n1 = ones(n, dtype=int)
print(n1)
-- EXECUTION TIME:
0.57374
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
